--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,6 +26,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-parcelize'
 
 android {
+    namespace "com.mhz.savegallery.saver_gallery"
     compileSdkVersion 34
 
     compileOptions {
